[project]
name = "healthy-shifts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arrow>=1.4.0",
    "click>=8.3.0",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
]

[tool.uv]
dev-dependencies = [
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
